.kubernetes/unleash/service.yml
apiVersion: v1
kind: Service
metadata:
  name: unleash-service
  labels:
    app: unleash
spec:
  type: ClusterIP
  selector:
    app: unleash
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4242
