.kubernetes/unleash/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unleash-ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: 'le-staging-wildcard-issuer'
    nginx.ingress.kubernetes.io/auth-url: 'https://auth.staging.etimo-test.live/oauth2/auth'
    nginx.ingress.kubernetes.io/auth-signin: 'https://auth.staging.etimo-test.live/oauth2/start?rd=https%3A%2F%2F$host$request_uri'
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
spec:
  rules:
    - host: 'achievements-unleash-test.staging.etimo-test.live'
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: unleash-service
                port:
                  number: 80
